--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
     {% endif %}
 
     <!-- Cayman first, then overrides -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css?v=hrjungle59" />
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css?v=hrjungle59" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css?v=hrjungle60" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css?v=hrjungle60" />
   </head>
   <body>
 
@@ -85,7 +85,6 @@
 
         <div class="hero-main__welcome">{{ site.hero_welcome | default: 'Welcome!' }}</div>
 
-        {% comment %} Tagline width = H1 width {% endcomment %}
         {% if site.hero_tagline or site.description %}
           <p class="hero-main__tagline" id="heroTagline">{{ site.hero_tagline | default: site.description }}</p>
         {% endif %}
@@ -123,6 +122,7 @@
       </footer>
     </main>
 
+    <!-- Tagline width = H1 width -->
     <script>
       (function () {
         function syncTaglineWidth(){
